--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,9 @@ main{
     justify-content: flex-start;
     align-items: end;
 }
+.help{
+    white-space: pre-line;
+}
 .art, .name{
     font-family: 'Courier New', Courier, monospace;
     white-space: pre;
@@ -39,8 +42,42 @@ main{
 }
 .command{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
     margin: .5rem 0;
+}
+.line1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.line1>div{
+    display: flex;
+    flex-direction: row;
+}
+.line2{
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+.command_input{
+    border: none;
+    outline: none;
+    margin: 0 .5rem;
+    resize: none;
+    font-weight: lighter;
+    overflow-y: hidden;
+    word-wrap: break-word;
+    color: hsl(39, 100%, 71%);
+    caret-color: hsl(39, 100%, 71%);
+
+}
+span{
+    color: hsl(27, 100%, 42%);
+}
+.keyword{
+    color: hsl(39, 100%, 71%);
+    font-weight: normal;
+    text-shadow: 0 0 .3rem hsl(39, 100%, 71%);
+
+        
 }
