--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,22 +5,26 @@
     background-color: hsl(220, 13%, 18%);
     color: hsl(218, 13%, 88%);
     font-family: 'FiraCode Nerd Font', sans-serif;
-    font-size: 1rem;
+}
+body{
+    height: 100vh;
+    width: 100vw;
 }
 .version{
     font-weight: bold;
 }
 main{
     display: inline-block;
-    height: 100dvh;
-    width: 100dvw;
     padding: 1rem;
+    width: 100%;
+    height: 100%;
 }
 .intro{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: end;
+    width: 100%;
 }
 .help{
     white-space: pre-line;
@@ -30,10 +34,11 @@ main{
     white-space: pre;
 }
 .art{
-    font-size: .7rem;
+    /* 50% of screen width */
+    font-size: clamp(.1rem, 1vw, .7rem);
 }
 .name{
-    font-size: 1rem;
+    font-size: clamp(.5rem, 1vw, .7rem);
 }
 .terminal{
     display: flex;
