--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,86 +1,79 @@
+/* colors variables */
+:root{
+    --color-background: hsl(220, 13%, 18%);
+    --color-text: hsl(218, 13%, 88%);
+    --color-terminal-text: hsl(27, 100%, 42%);
+    --color-caret: hsl(39, 100%, 71%);
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: hsl(220, 13%, 18%);
-    color: hsl(218, 13%, 88%);
-    font-family: 'FiraCode Nerd Font', sans-serif;
-}
-body{
-    height: 100vh;
-    width: 100vw;
-}
-.version{
-    font-weight: bold;
+    background-color: var(--color-background);
+    color:  var(--color-text);
+    font-family: 'FiraCode Nerd Font', sans-serif, 'Courier New', Courier, monospace;
 }
 main{
-    display: inline-block;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
     padding: 1rem;
-    width: 100%;
-    height: 100%;
+}
+.version{
+    font-size: clamp(8px, 1vw, 22px);
+    font-weight: bolder;
 }
 .intro{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
     align-items: end;
-    width: 100%;
-}
-.help{
-    white-space: pre-line;
+    gap: 2vw;
 }
 .art, .name{
     font-family: 'Courier New', Courier, monospace;
     white-space: pre;
+    font-size: clamp(3px, 1vw, 14px);
 }
-.art{
-    /* 50% of screen width */
-    font-size: clamp(.1rem, 1vw, .7rem);
-}
-.name{
-    font-size: clamp(.5rem, 1vw, .7rem);
-}
-.terminal{
-    display: flex;
-    flex-direction: column;
-    margin: 2rem .5rem;
-}
-.command{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: .5rem 0;
-}
-.line1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.line1>div{
-    display: flex;
-    flex-direction: row;
-}
-.line2{
-    display: grid;
-    grid-template-columns: auto 1fr;
-}
-.command_input{
-    border: none;
-    outline: none;
-    margin: 0 .5rem;
-    resize: none;
-    font-weight: lighter;
-    overflow-y: hidden;
-    word-wrap: break-word;
-    color: hsl(39, 100%, 71%);
-    caret-color: hsl(39, 100%, 71%);
-
-}
-span{
-    color: hsl(27, 100%, 42%);
+.help{
+    white-space: pre-line;
+    font-size: clamp(9px, 1vw, 24px);
+    font-weight: normal;
 }
 .keyword{
     color: hsl(39, 100%, 71%);
     font-weight: normal;
     text-shadow: 0 0 .3rem hsl(39, 100%, 71%);   
+}
+.terminal{
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
+.line1, .line2:not(:last-child){
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+span,.command_input{
+    color: var(--color-terminal-text);
+    font-size: clamp(12px, 1vw, 24px);
+}
+.line2{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 1rem;
+}
+.command_input{
+    border: none;
+    outline: none;
+    font-weight: lighter;
+    color: var(--color-text);
+    caret-color: var(--color-caret);
+}
+@media (min-width: 1200px) {
+    main {
+        padding: 2rem;
+    }
 }
