--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,8 @@
 @import "./themes.css";
+:root{
+    --color-error: hsl(355, 75%, 45%);
+    --font-size:clamp(12px, .8vw, 20px);
+}
 *{
     margin: 0;
     padding: 0;
@@ -15,7 +19,7 @@ main{
     padding: 1rem;
 }
 .version{
-    font-size: clamp(8px, 1vw, 22px);
+    font-size: clamp(8px, .9vw, 20px);
     font-weight: bolder;
 }
 .intro{
@@ -27,11 +31,11 @@ main{
 .art, .name{
     font-family: 'Courier New', Courier, monospace;
     white-space: pre;
-    font-size: clamp(3px, 1vw, 14px);
+    font-size: clamp(3px, .6vw, 14px);
 }
 .help{
     white-space: pre-line;
-    font-size: clamp(9px, 1vw, 24px);
+    font-size: var(--font-size);
     font-weight: normal;
 }
 .keyword{
@@ -51,7 +55,7 @@ main{
 }
 span,.command_input{
     color: var(--color-terminal-text);
-    font-size: clamp(12px, 1vw, 24px);
+    font-size: var(--font-size);
 }
 .line2{
     display: grid;
@@ -62,19 +66,27 @@ span,.command_input{
     border: none;
     outline: none;
     font-weight: lighter;
+    font-size: var(--font-size);
     color: var(--color-text);
     caret-color: var(--color-caret-Keyword);
 }
-.result, .error{
-    color: var(--color-text);
-    font-size: clamp(9px, 1vw, 24px);
+.help-out {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+.output p span{
+    font-size: var(--font-size);
+}
+.output, .error{
     font-weight: 80;
+    padding-top: 1vh;
+    font-size: var(--font-size);
 }
 .result{
     color: var(--color-text);
 }
 .error{
-    color: hsl(355, 65%, 65%);
+    color: var(--color-error);
 }
 @media (min-width: 1200px) {
     main {
