--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,8 +12,8 @@
     font-family: 'FiraCode Nerd Font', sans-serif, 'Courier New', Courier, monospace;
 }
 main{
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
     display: flex;
     flex-direction: column;
     padding: 1rem;
@@ -46,7 +46,7 @@ main{
 .terminal{
     display: flex;
     flex-direction: column;
-    gap: 2vh;
+    gap: 2dvh;
 }
 .line1{
     display: flex;
@@ -77,7 +77,7 @@ main{
 }
 .output, .error{
     font-weight: 80;
-    padding: 1vh 0 1vh 2vw;
+    padding: 1dvh 0 1dvh 2dvw;
     font-size: var(--font-size);
 }
 .error{
