--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,7 @@ main{
     font-family: 'Courier New', Courier, monospace;
     white-space: pre;
     font-size: clamp(4.3px, .6vw, 14px);
+    font-weight: 800;
 }
 .help{
     white-space: pre-line;
