--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -1,6 +1,32 @@
 .resume{
-    display: grid;
-    place-items: center;
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    /* gap: 1rem; */
+}
+/* all direct child of resume class */
+.resume > *{
+    padding-bottom: 1rem;
+}
+hr{
     width: 100%;
+    border: .1vw solid var(--color-text);
+    border-radius: 1rem;
+}
+.header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+.header p{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: .4rem;
+    white-space: pre;
+}
+/* fit img */
+.header img{
+    object-fit: cover;
 }
