--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -1,7 +1,7 @@
 .resume{
     display: flex;
     flex-direction: column;
-    /* gap: 1rem; */
+    gap: 1rem;
 }
 /* all direct child of resume class */
 .resume > *{
@@ -25,4 +25,12 @@ hr{
     flex-wrap: wrap;
     row-gap: .4rem;
     white-space: pre;
+}
+
+.education > *{
+    padding-bottom: .5rem;
+}
+.education-item {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
