--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -1,10 +1,8 @@
 .resume{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
-/* all direct child of resume class */
-.resume > *{
+.resume > *:not(:last-child){
     padding-bottom: 1rem;
 }
 hr{
@@ -27,10 +25,27 @@ hr{
     white-space: pre;
 }
 
-.education > *{
+.education > *, 
+.professional-experience > *,
+.projects > *,
+.skills > *,
+.achievements-and-certifications > *{
     padding-bottom: .5rem;
 }
-.education-item {
+
+.education-item, 
+.professional-experience-item {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: auto auto;
+}
+.education-item > *:nth-child(2n+2), 
+.professional-experience-item > *:nth-child(2n+2){
+    text-align: right;
+}
+.professional-experience-item > ul,
+.projects-item > ul,
+.skills > ul,
+.achievements-and-certifications > ul{
+    padding-left: 2rem;
+    padding-top: .25rem;
 }
