--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -1,6 +1,12 @@
 .resume{
     display: flex;
     flex-direction: column;
+    border: 2px solid var(--color-text);
+    border-radius: .6rem;
+}
+.resume * {
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-family:monospace;
 }
 .resume > *:not(:last-child){
     padding-bottom: 1rem;
@@ -9,6 +15,9 @@ hr{
     width: 100%;
     border: .1vw solid var(--color-text);
     border-radius: 1rem;
+}
+strong{
+    font-weight: 900;
 }
 .header{
     display: flex;
