--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body, input{
     background-color: var(--color-background);
     color:  var(--color-text);
     font-family: 'FiraCode Nerd Font', sans-serif, 'Courier New', Courier, monospace;
