--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -3,10 +3,9 @@
     flex-direction: column;
     border: 2px solid var(--color-text);
     border-radius: .6rem;
-}
-.resume * {
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family:monospace;
+    margin-top: 1rem;
 }
 .resume > *:not(:last-child){
     padding-bottom: 1rem;
@@ -15,6 +14,14 @@ hr{
     width: 100%;
     border: .1vw solid var(--color-text);
     border-radius: 1rem;
+}
+a{
+    color: var(--color-text);
+    text-decoration: underline;
+    font-weight: 900; 
+}
+a:hover{
+    text-shadow: 0 0 .3rem var(--color-text);
 }
 strong{
     font-weight: 900;
